# karmaio

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
karmaio/: Cargo.toml
karmaio/src/: buf.rs  driver.rs  io.rs  lib.rs  macros.rs  net.rs  runtime.rs  task.rs
karmaio/src/buf/: bounded_buf.rs  bounded_buf_mut.rs  io_buf.rs  io_buf_mut.rs  slice.rs  sliced_buf.rs  sliced_buf_mut.rs
karmaio/src/driver/: backends.rs  helpers.rs  ops.rs
karmaio/src/driver/backends/: iocp.rs  iouring.rs  kqueue.rs
karmaio/src/driver/helpers/: io_handle.rs  socket.rs
karmaio/src/driver/ops/: accept.rs  close.rs  connect.rs  read.rs  readv.rs  recv.rs  recv_from.rs  recvmsg.rs  send.rs  send_to.rs  sendmsg.rs  write.rs  writev.rs
karmaio/src/io/: async_buf_read.rs  async_read.rs  async_read_ext.rs  async_write_ext.rs  buf_reader.rs  buf_writer.rs  read.rs  write.rs
karmaio/src/io/write/: async_write.rs
karmaio/src/macros/: scoped_thread_local.rs
karmaio/src/net/: udp.rs
karmaio/src/net/tcp/: listener.rs  stream.rs
karmaio/src/net/unix/: listener.rs  stream.rs
karmaio/src/runtime/: local.rs
karmaio/src/runtime/local/: queue.rs  scheduler.rs
karmaio/src/task/: header.rs  internal.rs  join.rs  raw.rs  state.rs  trailer.rs  utils.rs  vtable.rs  waker.rs
