[package]
name = "karmaio"
description = "A modern fast multi-threaded share-nothing asynchronous runtime for Rust"
repository = "https://github.com/octavezero/karmaio"
homepage = "https://github.com/octavezero/karmaio"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Tarak Sharma <tarak@taraksharma.com>"]

version = "0.1.0"

categories = ["asynchronous", "network-programming"]
keywords = ["io", "thread-per-core", "iouring", "async", "futures"]

rust-version = "1.90"
edition = "2024"

# Core dependencies. Cross Platform
[dependencies]
socket2 = "0.6"
slab = "0.4"

# Unix platform dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux platform dependencies
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

# Windows platform dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_Storage_FileSystem", "Win32_System_IO"] }
